# rs-bybit

./: Cargo.toml  LICENSE
examples/: ws_kline.rs
src/: client.rs  lib.rs
src/clients/: api.rs  mod.rs  ws.rs
src/models/: credentials.rs  execution.rs  filters.rs  instrument_info.rs  kline_data.rs  mod.rs  order.rs  order_id.rs  position.rs  wallet_balance.rs  wallet_coin.rs
src/models/base/: endpoint.rs  mod.rs  request.rs  response_wrapper.rs
src/models/endpoints/: amend_order.rs  batch_cancel_orders.rs  cancel_all_orders.rs  cancel_order.rs  instruments_info.rs  inter_transfer.rs  kline.rs  mod.rs  open_and_closed_orders.rs  place_order.rs  position_info.rs  server_time.rs  set_leverage.rs  trading_history.rs  trading_stop.rs  wallet_balance.rs
src/models/enums/: account_type.rs  auction_phase.rs  cancel_type.rs  category.rs  contract_type.rs  copy_trading.rs  create_type.rs  exec_type.rs  interval.rs  margin_trading.rs  mod.rs  options_type.rs  order_filter.rs  order_status.rs  order_type.rs  position_idx.rs  position_status.rs  reject_reason.rs  side.rs  smp_type.rs  status.rs  stop_order_type.rs  time_in_force.rs  tpsl_mode.rs  trigger_by.rs  trigger_direction.rs
src/models/ws/: command.rs  fast_execution.rs  message.rs  mod.rs  topic_type.rs  ws_kline_data.rs
src/utilities/: deserializers.rs  hmac_sign.rs  mod.rs  time.rs
